# libgpr

./: CMakeLists.txt  README.md
cmake/: FindNLopt.cmake
kernels/: KernelBase.hh  MaternFiveHalves.hh  MaternThreeHalves.hh  MaternThreeHalvesPeriodic.hh  RadialBasisKernel.hh  RationalQuadratic.hh
libgpr/: README.md
models/: GaussianProcessRegressionModels.hh
optimization/: DirectBasedKernelOptimizer.hh  GradientBasedKernelOptimizer.hh  KernelOptimizator.hh  KernelOptimizer.hh
src/: GaussianProcessRegressionTest.cc
